# LearningOpengl

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  main.cpp  opengl_proj  test.cpp
.cmake/api/v1/reply/: cache-v2-15615038995a1782d6a2.json  cmakeFiles-v1-4ed73fef475956702983.json  codemodel-v2-1e280ea08e000f8849e3.json  index-2024-06-15T17-10-31-0465.json  target-Continuous-Debug-c127669e9e0b9f971f1e.json  target-ContinuousBuild-Debug-42b4fc2726c3d3acf6af.json  target-ContinuousConfigure-Debug-a9cf18a9ea57189fb563.json  target-ContinuousCoverage-Debug-a144209331e550dd430c.json  target-ContinuousMemCheck-Debug-9f2e3ccf76135b96bfdf.json  target-ContinuousStart-Debug-6bec62e78ae7c2a46d0e.json  target-ContinuousSubmit-Debug-62e0ea4d226185d0bd1e.json  target-ContinuousTest-Debug-6fb077a8628b712f05e7.json  target-ContinuousUpdate-Debug-2477318bec335f78c293.json  target-Experimental-Debug-0c280e94477cd31e1f3b.json  target-ExperimentalBuild-Debug-3e3df2736271dec28eef.json  target-ExperimentalConfigure-Debug-f5dd1a13eeefa4e641b3.json  target-ExperimentalCoverage-Debug-18505fef1687b63d9f96.json  target-ExperimentalMemCheck-Debug-4436bc37f4e5e2a05f73.json  target-ExperimentalStart-Debug-28f2670776aff235124c.json  (+14 more)
Testing/: TAG
Testing/20240331-1630/: Test.xml
Testing/20240519-1559/: Test.xml
Testing/20240615-1710/: Test.xml
src/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  glad.c
